ggit: Updated wyrax.github.io

--- a/464.html
+++ b/464.html
@@ -6,8 +6,8 @@
     <title>Page not found</title>
 </head>
 <body>
-    <h3>O_ops... </h3>
-    <h3>It's a 404 situation here!</h3>
-    <h1>Page not found</h1>
+    <h3>Code 464 (suddenly)</h3>
+    <h3>Redirected from</h3>
+    <h1>404.md</h1>
 </body>
 </html>
